# simplefinder

./: Cargo.toml  install.sh
autoload/: simplefinder.vim
plugin/: simplefinder.vim
src/simplefinder/: simplefinder_daemon.rs
