[package]
name = "simplefinder"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "simplefinder-daemon"
path = "src/simplefinder/simplefinder_daemon.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync"] }
tokio-util = "0.7"
ignore = "0.4"
nucleo-matcher = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
regex-syntax = "0.8"
num_cpus = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
